# My_GtkUi

./: .gitignore  .gitmodules  README.developers  README.md  TextEditor.cc  TextEditor.hh  config.toml
Flos_Gtk4/res/: dock.ui  (+6 more)
Gtk3/: CMakeLists.txt  build_mingw.cmd
Gtk3/gtk42/: gtk42.layout
Gtk3/res/: gtk42.resource.xml  leftpanel.ui  leftpanel.ui~  title.ui  win_size.ui~
Gtk3/src/: FileWindow.cpp  FileWindow.h  TextEditor.cpp  TextEditor.h  background.cpp  image_types.h  main.cpp  panel1.cpp  panel2.cpp  panel2.h  win1.cpp  winconf.cpp  winconf.h
Gtk4/: CMakeLists.txt
Gtk4/gtk42/: gtk42.depend
Gtk4/res/: appmenu.xml  game1.ui  image_label.ui  leftpanel.ui  media_menu.xml  stack.ui  style.css
Gtk4/src/: FileWindow.cpp  FileWindow.h  GameWin.cpp  GameWin.h  LeftPanel.cpp  LeftPanel.h  MainStack.cpp  MainStack.h  MainWin.cpp  MainWin.h  MediaPlayer.cpp  MediaPlayer.h  TextEditor.cpp  TextEditor.h  background.h  drawing.cpp  drawing.h  game.cpp  game.h  main.cpp  panel1.h  panel2.h  winconf.cpp  winconf.h
Gtk4/src/apps/: GameWin.h  MediaPlayer.h  TextEditor.h  drawing.h
Gtk4/src/core/: LeftPanel.cpp  LeftPanel.h  MainStack.cpp  MainStack.h  MainWin.cpp  MainWin.h  MyTitleBar.h  winconf.cpp  winconf.h
Gtk4/src/drawing_app/: drawing.cpp
Gtk4/src/file_app/: FileColumnView.cpp  FileGridView.cpp  FileWindow.cpp  FileWindow.h  GetFileType.h
Gtk4/src/game_app/: GameWin.cpp
Gtk4/src/media_app/: MediaPlayer.cpp
Gtk4/src/text_app/: TextEditor.cpp
Gtk4_Reset/: CMakeLists.txt  my_gtkui.json
Gtk4_Reset/res/: calcapp.ui  expander.ui  game1.ui  game24.ui  mine_app.css  mydock.ui  stack.ui  style.css  style_dark.css  title_style.css
Gtk4_Reset/res/cambalache/: test.cmb  test3.ui
Gtk4_Reset/src/apps/: CalcApp.h  CalcApp.hh  DrawApp.h  FileWindow.h  Game24App.h  GameApp.h  ImageApp.h  ImageApp.hh  MineSweeper.h  MyMediaPlayer.h  RunApp.h  TextEditor.h
Gtk4_Reset/src/calc_app/: CalcApp.cpp  calc.cpp
Gtk4_Reset/src/core/: MainWin.cpp  MainWin.h  MyStack.cpp  MyStack.h  main.cc  main.cpp
Gtk4_Reset/src/draw_app/: DrawApp.cpp  drawing.cc
Gtk4_Reset/src/file_app/: FileWindow.cpp
Gtk4_Reset/src/game24_app/: Game24.cpp  Game24App.cpp
Gtk4_Reset/src/game_app/: Game.cc  GameApp.cpp
Gtk4_Reset/src/image_app/: ImageApp.cc  ImageApp.cpp  MyImage.cpp  MyImage.h
Gtk4_Reset/src/media_app/: LyricsParser.cpp  MediaItem.cpp  MediaItem.h  MyMediaPlayer.cpp
Gtk4_Reset/src/mine_app/: InputBox.cpp  MineSweeper.cc  MineSweeper.cpp  ScoresItem.cpp  ScoresWin.cpp
Gtk4_Reset/src/run_app/: RunApp.cpp
Gtk4_Reset/src/text_app/: MyInfoBar.cpp  MyInfoBar.h  TextEditor.cc  TextEditor.cpp
Gtk4_Reset/src/ui/: AppView.cpp  AppView.h  MyDock.cc  MyDock.cpp  MyDock.h  MyFinder.cpp  MyFinder.h  MyFinder.hh  MyPrefs.cpp  MyPrefs.h  MyTitleBar.cpp  MyTitleBar.h
Gtk4_Reset/wayland/: CMakeLists.txt
Gtkmm3/: CMakeLists.txt  My_GtkUI  build_mingw.cmd
Gtkmm3/res/: appmenu.xml  compile-resource.sh  dock_style.css  game1.ui  leftpanel.ui  main_stack.ui  my_gtkui.resource.xml  title.ui  toppanel.ui  win_size.ui
Gtkmm3/src/: FileWindow.cc  FileWindow.hh  Game.cc  Game.hh  LeftPanel.cc  LeftPanel.hh  MyStack.cc  MyStack.hh  MyWin.cc  MyWin.hh  Runner.cc  Runner.hh  TextEditor.cc  TextEditor.hh  TopPanel.cc  TopPanel.hh  drawing.cc  drawing.hh  image_types.hh  resources.cc  winconf.cc  winconf.hh
Gtkmm3/src/apps/: FileWindow.hh  ImageApp.hh  TextEditor.hh
Gtkmm3/src/core/: MyStack.cc  MyStack.hh  MyWin.cc  winconf.cc
Gtkmm3/src/file_app/: FileWindow.cc
Gtkmm3/src/game_app/: Game.cc
Gtkmm3/src/image_app/: ImageApp.cc
Gtkmm3/src/panels/: LeftPanel.cc  LeftPanel.hh  TopPanel.cc  TopPanel.hh
Gtkmm3/tests/: meson.build
Gtkmm3_Mac/: CMakeLists.txt
Gtkmm3_Mac/res/: dock_style.css  game1.ui  login_style.css  mainmenu.xml  menubar.xml  mine_style.css  mydock.ui  mygtkui.gresource.xml  prefs_stack.ui  stack.ui  style.css  style_light.css
Gtkmm3_Mac/src/apps/: CalcApp.hh  FileWindow.hh  Game.hh  Game24Win.hh  ImageApp.hh  MineSweeper.hh  TextEditor.hh  drawing.hh
Gtkmm3_Mac/src/calc_app/: CalcApp.cc
Gtkmm3_Mac/src/core/: MyFinder.hh  MyStack.cc  MyStack.hh  MyWin.cc  MyWin.hh
Gtkmm3_Mac/src/draw_app/: drawing.cc
Gtkmm3_Mac/src/file_app/: FileWindow.cc
Gtkmm3_Mac/src/game24_app/: Game24Win.cc
Gtkmm3_Mac/src/game_app/: Game.cc
Gtkmm3_Mac/src/image_app/: ImageApp.cc
Gtkmm3_Mac/src/mine_app/: MineSweeper.cc
Gtkmm3_Mac/src/run_app/: Runner.cc
Gtkmm3_Mac/src/text_app/: TextEditor.cc
Gtkmm3_Mac/src/ui/: MyDock.cc  MyDock.hh  MyFinder.cc  MyFinder.hh  MyPrefs.cc  MyPrefs.hh  MyTitleBar.cc  MyTitleBar.hh  WinConf.cc  WinConf.hh
Gtkmm4_v8/: CMakeLists.txt
Gtkmm4_v8/.cache/clangd/index/: AppMenu.cc.7FF7E6473F07B83F.idx  AppMenu.hh.F71D8F176B383A20.idx  (+15 more)
Gtkmm4_v8/res/: calcapp.ui  game1.ui  game24.ui  mainmenu.xml  prefs_stack.ui  style.css  style_dark.css  text_menu.xml
Gtkmm4_v8/res/cambalache/: background.ui  findermenu.ui  mainwin.cmb  mainwin.ui  mypanel.ui  overlaywin.ui  scoreswin.ui  test.cmb  win_input.ui
Gtkmm4_v8/src/apps/: CalcApp.hh  FileWindow.h  FileWindow.hh  Game.hh  Game24Win.hh  GameApp.h  ImageApp.hh  MineSweeper.hh  MyMediaPlayer.hh  Runner.hh  TextEditor.h  TextEditor.hh  drawing.hh
Gtkmm4_v8/src/calc_app/: CalcApp.cc
Gtkmm4_v8/src/core/: MainWin.cc  MainWin.hh  MyHeader.cc  MyHeader.hh  MyLimit.h  MyStack.cc  MyStack.hh  config.hh  image_types.hh
Gtkmm4_v8/src/draw_app/: drawing.cc
Gtkmm4_v8/src/file_app/: FileWindow.cc  GetFileType.hh  MsgDialog.cc  MsgDialog.hh
Gtkmm4_v8/src/game24_app/: Game24Win.cc
Gtkmm4_v8/src/game_app/: Game.cc  GameApp.cpp
Gtkmm4_v8/src/image_app/: ImageApp.cc  MyImage.cc  MyImage.hh
Gtkmm4_v8/src/media_app/: LyricsParser.cc  LyricsParser.hh  MyMediaPlayer.cc
Gtkmm4_v8/src/mine_app/: InputBox.cc  InputBox.hh  MineSweeper.cc  ScoresWin.cc  ScoresWin.hh
Gtkmm4_v8/src/run_app/: RunApp.cpp  Runner.cc
Gtkmm4_v8/src/text_app/: TextEditor.cc
Gtkmm4_v8/src/ui/: AppMenu.cc  AppMenu.hh  AppView.h  MyDock.cpp  MyFinder.cc  MyFinder.hh  MyPanel.cc  MyPanel.hh  MyPrefs.cc  MyPrefs.hh  MyTitleBar.cpp
(+57 files in other folders)
